--- a/app/templates/app/more-info.html
+++ b/app/templates/app/more-info.html
@@ -42,7 +42,7 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="{% static 'img/covid19.jpg' %}" alt=""></a>
+        <a href="#"><img class="card-img-top" src="{% static 'img/wahs.jpg' %}" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Wash your hands frequently</a>
@@ -55,7 +55,7 @@ Why? Washing your hands with soap and water or using alcohol-based hand rub kill
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="{% static 'img/social-distance.jpg' %}" alt=""></a>
+        <a href="#"><img class="card-img-top" src="{% static 'img/distance.jpg' %}" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#"> Maintain social distancing</a>
