--- a/app/templates/app/user-interface.html
+++ b/app/templates/app/user-interface.html
@@ -11,6 +11,10 @@
         display: none;
 
       }
+      .leaflet-container {  /* all maps */
+        width:  1100px;
+        height: 500px;
+      }
     </style>
 
 {% endblock head %}
@@ -25,7 +29,7 @@
       </div>
     </div>
     <div class="my-4">
-      <a href="#" class="btn btn-success center-block btn-lg putMarkers">Go Go Go</a>
+      <a href="{% url 'home' %}" class="btn btn-success center-block btn-lg putMarkers">Back to Home</a>
     </div>
 
   <div class="container">
