--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,9 +12,8 @@
               If you need so fast a toiltet click in the SEARCH TOILET button and share you ubication. But, if you only want
               to check our web application stay here and start with about Ublime.
             </p>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-center">
               <a href="{% url 'userInterface' %}" class="btn btn-info mv-3">SEARCH TOILET</a>
-              <a href="{% url 'providerInterface' %}" class="btn btn-secondary mv-3">REGISTER TOILET</a>
             </div>
           </div>
           <div class="col-md-6 col-lg 6 header-content-right mt-3">
