--- a/app/templates/app/maps.html
+++ b/app/templates/app/maps.html
@@ -1,6 +1,16 @@
 {% load static %}
    <script>
-      // check if using app from movil or pc
+      var map = L.map('map').setView([4.6097102, -74.081749], 13);
+        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+        maxZoom: 18,
+        id: 'mapbox/streets-v11',
+        tileSize: 512,
+        zoomOffset: -1,
+        accessToken: 'pk.eyJ1IjoidWJsaW1lIiwiYSI6ImNrN2ZhaWR4MjAweDgzZXM2NGVuZHdzZDEifQ.hbjfd0TkNuvnmb0zW-dFKg'
+      }).addTo(map);
+
+       // check if using app from movil or pc
       let movil = false;
       if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
            movil = true;
@@ -20,7 +30,7 @@
           iconUrl: "{% static 'img/marker-personal.png' %}",
           iconSize:     [30, 30],
       });
-
+      map_init_basic(map);
       // function that put the markers into the map
       function map_init_basic (map, options) {
         function location (map) {
