--- a/app/templates/app/user-interface.html
+++ b/app/templates/app/user-interface.html
@@ -24,9 +24,8 @@
   <div class="container mt-5 pt-5 text-center">
     <h2 class="display-4">Search your Toilet</h2>
     <div class="row">
-      <div class="col-12 mt-2">
-       {% leaflet_map "map" callback="window.map_init_basic" %}
-      </div>
+        <!-- load the map  -->
+        <div id="map"></div>
     </div>
     <div class="my-4">
       <a href="{% url 'home' %}" class="btn btn-success center-block btn-lg putMarkers">Back to Home</a>
