--- a/app/templates/app/user-interface.html
+++ b/app/templates/app/user-interface.html
@@ -11,11 +11,7 @@
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
     <style type="text/css">
-      .leaflet-control-attribution{
-        display: none;
-
-      }
-      .leaflet-container {  /* all maps */
+      #map {  /* all maps */
         width:  1100px;
         height: 500px;
       }
